# FAST-LOCALIZATION

./: .gitignore  INSTALL.md
src/: generate_nav_map_adaptive.py  generate_nav_map_from_trajectory copy.py  generate_nav_map_from_trajectory.py  putn_traversability.py
src/FAST-LOCALIZATION/: CMakeLists.txt
src/FAST-LOCALIZATION/config/: lslidar_C16.yaml
src/FAST-LOCALIZATION/launch/: localization_lslidar_C16.launch
src/FAST-LOCALIZATION/src/: IMU_Processing.hpp  laserMapping.cpp
src/global_map/: nav_map.pgm  nav_map.yaml
src/global_map/adaptive_debug/: adaptive_width_profile.csv  fixed_widths.txt  nav_map_adaptive.pgm  nav_map_adaptive.yaml
src/imu/imu_launch/launch/: imu_msg.launch
src/imu/serial_port/src/: serial_imu.cpp
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: costmap_common.yaml  global_costmap.yaml  local_costmap_no_obstacle.yaml  local_costmap_obstacle.yaml  move_base_params.yaml  nav.rviz  teb_local_planner_params.yaml
src/navigation/launch/: nav_bringup.launch
src/navigation/scripts/: cmd_vel_filter.py  map_odom_broadcaster.py
src/ranger_ros/ranger_base/include/ranger_base/: ranger_messenger.hpp
src/ranger_ros/ranger_base/launch/include/: ranger_robot_base.launch
src/ranger_ros/ranger_base/src/: ranger_messenger.cpp
src/ranger_ros/ranger_bringup/launch/: ranger_mini_v2.launch
