<?xml version="1.0"?>
<package format="2">
  <name>navigation</name>
  <version>0.0.1</version>
  <description>Navigation launch and parameter bundle for FAST-LOCALIZATION (map server, costmaps, move_base).</description>

  <maintainer email="linux@todo.todo">linux</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>move_base</depend>
  <depend>map_server</depend>
  <depend>costmap_2d</depend>
  <depend>nav_core</depend>
  <depend>navfn</depend>
  <depend>dwa_local_planner</depend>
  <exec_depend>teb_local_planner</exec_depend>

  <export/>
</package>
